# project-switcher

./: .gitignore  README.md  pyproject.toml
src/project_switcher/: cli.py  commands.py  config.py
